trying to fix images/text wrap

--- a/style.css
+++ b/style.css
@@ -53,10 +53,16 @@ margin: auto;
   margin: 0 0 10px 10px;
   display: block;
   margin: auto;
-  width: 50%;
+
 
 }
 
+#foundertwo{
+margin: 0 0 10px 10px;
+display: block;
+margin: auto;
+
+}
 
 .button {
   background-color: #242075;
@@ -65,7 +71,7 @@ margin: auto;
   margin: 10px;
   padding: 10px;
   width: 100%;
-  border-radius: 40px;
+  border-radius: 50px;
   -moz-border-radius: 80px;
   -webkit-border-radius: 80px;
 }
@@ -130,9 +136,7 @@ margin: auto;
     background-color: #4CAF50;
   }
 
-    #mission p {
-      width: 100%;
-    }
+
 }
 
 ul {
